# mjgrep

./: Cargo.toml  README.md
src/: main.rs
src/grep/: config.rs  mod.rs  printer.rs  search.rs
