[package]
name = "mjgrep"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
regex = "1.10"
colored = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
